syntax = "proto3";

package grover;
option go_package = "github.com/jgoldverg/grover/pb;pb";

service GroverServer {
  rpc StartServer (StartServerRequest) returns (StartServerResponse);
  rpc StopServer  (StopServerRequest)  returns (StopServerResponse);
}

message StartServerRequest {
  uint32 udp_port = 1;
  uint32 workers_per_file = 2;
  uint32 max_transfers = 3;
}

message StartServerResponse {
  bool   ok = 1;
  uint32 port = 2;
  string message = 3;
}

message StopServerRequest {}
message StopServerResponse {
  bool   ok = 1;
  string message = 2;
}
